[gd_scene load_steps=11 format=2]

[ext_resource path="res://Camera.gd" type="Script" id=1]
[ext_resource path="res://TextureRect.gd" type="Script" id=2]
[ext_resource path="res://Rotation.gd" type="Script" id=3]
[ext_resource path="res://main.gd" type="Script" id=4]
[ext_resource path="res://Global.gd" type="Script" id=5]
[ext_resource path="res://code.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://theme.tres" type="Theme" id=7]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.413408, 1 )
colors = PoolColorArray( 0, 0.133333, 0.309804, 1, 0, 0.450012, 0.570313, 1, 0.699219, 0.936554, 1, 1 )

[sub_resource type="GradientTexture2D" id=2]
gradient = SubResource( 1 )
width = 1024
height = 600
fill_from = Vector2( 1, 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 6 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
rect_pivot_offset = Vector2( -709, -233 )
texture = SubResource( 2 )
expand = true
script = ExtResource( 2 )

[node name="GUIDE" type="Line2D" parent="."]
position = Vector2( 120, -2 )
points = PoolVector2Array( 294, 602, 294, 2 )
width = 4.0
default_color = Color( 0, 0, 0, 1 )

[node name="GUIDE2" type="Line2D" parent="."]
position = Vector2( 2, 122 )
points = PoolVector2Array( 412, 297, 1022, 297 )
width = 4.0
default_color = Color( 0, 0, 0, 1 )

[node name="GUIDE3" type="Line2D" parent="."]
visible = false
points = PoolVector2Array( 413, 299, 1024, 299 )
width = 4.0
default_color = Color( 0, 0, 0, 1 )

[node name="GUIDE4" type="Line2D" parent="."]
position = Vector2( 0, -114 )
points = PoolVector2Array( 412, 297, 1024, 297 )
width = 4.0
default_color = Color( 0, 0, 0, 1 )

[node name="Line2D" type="Line2D" parent="."]
points = PoolVector2Array( 294, 299, 294, 181 )
width = 4.0
default_color = Color( 0, 0.811765, 1, 1 )
script = ExtResource( 3 )

[node name="Base" type="Line2D" parent="Line2D"]
points = PoolVector2Array( 294, 299, 1024, 299 )
width = 4.0
default_color = Color( 0, 0, 0, 1 )

[node name="Mover" type="Line2D" parent="Line2D/Base"]
points = PoolVector2Array( 298, 299, 298, 182 )
width = 4.0
default_color = Color( 0, 1, 0.0392157, 1 )

[node name="Definer" type="Line2D" parent="Line2D"]
position = Vector2( 0, -114 )
points = PoolVector2Array( 292, 297, 1024, 297 )
width = 4.0
default_color = Color( 1, 0, 0, 1 )

[node name="MoverFollower" type="Camera2D" parent="."]
offset = Vector2( -200, -250 )
anchor_mode = 0
current = true
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.001

[node name="Global" type="Node" parent="."]
script = ExtResource( 5 )

[node name="GUI" type="CanvasLayer" parent="."]

[node name="GUIDELINES" type="Button" parent="GUI"]
margin_left = 17.0
margin_top = 542.0
margin_right = 177.0
margin_bottom = 581.0
theme = ExtResource( 7 )
text = "HIDE GUIDE LINES"

[node name="PLAY" type="Button" parent="GUI"]
margin_left = 220.0
margin_top = 543.0
margin_right = 380.0
margin_bottom = 582.0
theme = ExtResource( 7 )
text = "PLAY"

[node name="FOLLOW" type="Button" parent="GUI"]
margin_left = 17.0
margin_top = 484.0
margin_right = 177.0
margin_bottom = 523.0
theme = ExtResource( 7 )
text = "FOLLOW"

[node name="MOVER_SPEED" type="SpinBox" parent="GUI"]
margin_left = 29.0
margin_top = 443.0
margin_right = 163.0
margin_bottom = 472.0
theme = ExtResource( 7 )
max_value = 10.0
value = 1.0

[node name="Label" type="Label" parent="GUI/MOVER_SPEED"]
margin_left = -9.0
margin_top = -19.0
margin_right = 135.0
custom_fonts/font = SubResource( 3 )
text = "Green Line Speed"

[node name="ANGLE_SPEED" type="SpinBox" parent="GUI"]
margin_left = 239.0
margin_top = 442.0
margin_right = 373.0
margin_bottom = 471.0
theme = ExtResource( 7 )
max_value = 2.0
step = 0.01
value = 0.02

[node name="Label2" type="Label" parent="GUI/ANGLE_SPEED"]
margin_left = -3.0
margin_top = -18.0
margin_right = 141.0
margin_bottom = 1.0
custom_fonts/font = SubResource( 3 )
text = "Blue Line Speed"

[node name="DEBUG" type="CheckButton" parent="GUI"]
margin_left = 292.0
margin_top = 483.0
margin_right = 368.0
margin_bottom = 523.0

[node name="Label2" type="Label" parent="GUI/DEBUG"]
margin_left = -50.0
margin_top = 10.0
margin_right = 94.0
margin_bottom = 29.0
custom_fonts/font = SubResource( 3 )
text = "DEBUG:"

[node name="COLORHEX" type="LineEdit" parent="GUI"]
margin_left = 18.0
margin_top = 393.0
margin_right = 178.0
margin_bottom = 417.0
text = "FFFFFF"

[node name="Label2" type="Label" parent="GUI/COLORHEX"]
margin_top = -22.0
margin_right = 144.0
margin_bottom = -3.0
custom_fonts/font = SubResource( 3 )
text = "Line Color HEX:"

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="GUI/GUIDELINES" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="GUI/GUIDELINES" to="TextureRect" method="_on_Button_pressed"]
[connection signal="pressed" from="GUI/PLAY" to="Line2D" method="_on_PLAY_pressed"]
[connection signal="pressed" from="GUI/FOLLOW" to="MoverFollower" method="_on_FOLLOW_pressed"]
